Correções SFC pós reunião. Refs bolha

--- a/Articles/SFC/Analytical.org
+++ b/Articles/SFC/Analytical.org
@@ -679,12 +679,12 @@ Finally, replacing Equation ref:h_long into Equation ref:Y_nivel we obtain long-
 
 \begin{equation}
 \label{Y_lr}
-Y^{\star} = \frac{Z}{1 - \omega - g^{\star}\cdot \frac{v}{u^{\star}}}
+Y^{\star} = \frac{Z}{\left(1 - \omega - g^{\star}\cdot \frac{v}{u^{\star}}\right)}
 \end{equation}
 Once again, we can show the long-run position making the residential investment growth rate explicit as in Equation ref:Y_gIh
 \begin{equation}
 \label{Y_gIh}
-Y^{\star} = \frac{I_h}{(1-R)(1 - \omega - g_{I_h}^{\star}\cdot \frac{v}{u^{\star})}}
+Y^{\star} = \frac{I_h}{\left(1-R\right)\left(1 - \omega - g_{I_h}^{\star}\cdot \frac{v}{u^{\star}\right)}}
 \end{equation}
 
 Next, we move towards the analysis of the particularities of our model:  one of the NCC autonomous expenditures also contributes to total capital stock.  
