--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
@@ -1,4 +1,4 @@
-% Created 2020-12-11 sex 18:54
+% Created 2020-12-15 ter 11:30
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -53,11 +53,11 @@ Although simple, our numerical simulations are capable to reproduce some stylize
 
 
 \section{Introduction}
-\label{sec:org8c1ea9b}
+\label{sec:orgb523208}
 \label{sec:introduction}
 Non-residential investment is the most scrutinized variable in demand-led growth models so that others expenditures are given a secondary role \cite{brochier_macroeconomics_2017}.
 More than a decade after the Great Recession, this is still the case for residential investment which continues to receive sparse and unsystematic attention by the literature \cites{caverzasi_stock-flow_2013}{nikolaidi_minsky_2017}.
-Despite its absence in theoretical models, there is a growing empirical literature highlighting its macrodynamic relevance \cites{leamer_housing_2007}{jorda_great_2014}{fiebiger_semi-autonomous_2018}{fiebiger_trend_2017}.
+Despite its absence in theoretical models, there is a growing empirical literature highlighting its macrodynamic relevance \cites{leamer_housing_2007}{jorda_great_2016}{fiebiger_semi-autonomous_2018}{fiebiger_trend_2017}.
 
 
 Sraffian supermultiplier growth model (SSM) establishes an important role to non-capacity creating (NCC) autonomous expenditures such
@@ -89,12 +89,12 @@ Section \ref{sec:Conclusion} offers some concluding remarks while Appendix \ref{
 
 
 \section{Empirical Motivation}
-\label{sec:org8990bf3}
+\label{sec:org20d1727}
 \label{sec:empirical}
 A growing body of empirical demand-led literature has evaluated the role of NCC autonomous expenditures.
-\textcite{freitas_pattern_2013} present a growth accounting decomposition fro Brazil from 1970 to 2005 and report the relevance of those expenditures in describing Brazilian GDP growth. \textcite{braga_investment_2018} shows evidence that economic growth and non-residential investment are explained by NCC autonomous expenditures in Brazilian economy from 1962 to 2015. For the U.S., \textcite{girardi_long-run_2016} show that NCC autonomous expenditures have permanent effects on growth rate. 
-\textcite{haluska_growth_2019} employ Granger-causality tests to assess the stability of the SSM for the US (1987-2017) and report a causality from NCC autonomous expenditures to the marginal propensity to invest, as expected.
-Finally, \textcite{girardi_autonomous_2018} bring evidence that those expenditures determine investment share on GDP for twenty OECD countries.
+\textcite{freitas_pattern_2013} present a growth accounting decomposition fro Brazil from 1970 to 2005 and report the relevance of those expenditures in describing Brazilian GDP growth. \textcite{braga_investment_2020} shows evidence that economic growth and non-residential investment are explained by NCC autonomous expenditures in Brazilian economy from 1962 to 2015. For the U.S., \textcite{girardi_long-run_2016} show that NCC autonomous expenditures have permanent effects on growth rate.
+\textcite{haluska_growth_2020} employ Granger-causality tests to assess the stability of the SSM for the US (1987-2017) and report a causality from NCC autonomous expenditures to the marginal propensity to invest, as expected.
+Finally, \textcite{girardi_autonomous_2020} bring evidence that those expenditures determine investment share on GDP for twenty OECD countries.
 
 \\
 However, there still is a lack of studies on the role of residential investment specifically.
@@ -113,7 +113,7 @@ However, most of them have emphasized house prices and not its volume (residenti
 \textcite{goodhart_house_2008} for instance, estimate a time-series fixed effects panel data for 17 industrialized countries from 1970 to 2006. They report a multidirectional relation between money, credit, house prices and GDP growth and have found stronger effects during housing booms\footnote{\textcite{Arestis_Bank_2014} also found a  direct relationship between house prices and credit volume based on cointegration and error correction techniques for 9 OECD countries from 1970 to 2011.}. 
 \textcite{wood_house_2020} report that house prices are relevant for describing household indebtedness from 1980 to 2017 in 18 advance economies.
 However, both studies do not include residential investment.
-\textcite{arestis_residential_2015}, on the other side, include residential investment. Using a ARDL model for 17 OECD countries from 1970 to 2013, the authors report that banking credit and real house prices are the most statistically significant variables for real residential investment in the US.
+\textcite{Arestis_Residential_2014}, on the other side, include residential investment. Using a ARDL model for 17 OECD countries from 1970 to 2013, the authors report that banking credit and real house prices are the most statistically significant variables for real residential investment in the US.
 Although those approaches are interesting, it fails to take into account the connection between asset bubbles and aggregate demand which is relevant for describe the recent housing burst event.
 
 \\
@@ -123,15 +123,11 @@ On the following subsection, we present some residential investment-related styl
 Next, we analyze the connection between residential investment, real estate inflation and mortgage interest rate during the U.S. housing bubble episode.
 
 \subsection{Residential investment stylized facts}
-\label{sec:orgbf10484}
+\label{sec:org02a1dbd}
 
 As discussed before, both \textcites{green_follow_1997}{leamer_housing_2007} made it clear how important this particular expenditure is to USA business cycle. In this subsection, we show some residential investment stylized facts for the US in more detail.
 
-\begin{itemize}
-\item[{$\square$}] Introdução mais alongada
-\end{itemize}
-
-Figure \ref{Investo_Resid_GDP} shows how residential investment movements help to predict recessions. Recessions are anticipated by a reduction of residential investment share on GDP, while the expansion of those expenditures precedes economic recovery. The fall of dwellings expenditures in 1966-67 are an exception because the increase of military expenditures because of Vietnam War offset an eventual economic downturn \cite[p.~20]{leamer_housing_2007}. Another exception is the dot-com bubble 2000 crisis that was not caused by residential investment. The Great Recession 2008-2009 is the one in which this pattern is the most evident. 
+Figure \ref{Investo_Resid_GDP} shows how residential investment movements help to predict recessions. Recessions are anticipated by a reduction of residential investment share on GDP, while the expansion of those expenditures precedes economic recovery. The fall of dwellings expenditures in 1966-67 are an exception because the increase of military expenditures because of Vietnam War offset an eventual economic downturn \cite[p.~20]{leamer_housing_2007}. Another exception is the dot-com bubble 2000 crisis that was not caused by residential investment. The Great Recession 2008-2009 is the one in which this pattern is the most evident.
 
 
 
@@ -160,7 +156,7 @@ This increase implies GDP to grow faster than residential investment, therefore 
 \end{figure}
 
 \subsection{Housing bubble and residential investment}
-\label{sec:org473bac1}
+\label{sec:org2c4b9b0}
 Once residential investment is relevant to describe the U.S. business cycle, it is important to understand its determinants.
 There are at some key variables to assess the residential investment behavior.
 The first variable is the mortgage interest rate, which determines the financial cost of buying houses and the weight of debt-service on house investors' income.
@@ -196,10 +192,10 @@ In the next section, we build a fully specified parsimonious Sraffian supermulti
 
 
 \section{A Sraffian supermultiplier SFC model with residential investment}
-\label{sec:org4924ada}
+\label{sec:org35aa1ac}
 \label{sec:Model}
 \subsection{General equations}
-\label{sec:org8ed2384}
+\label{sec:orga66808a}
 
 Our model is the most parsimonious as possible: a closed capitalist economy without government sector. Output (\(Y\)) is determined by  a fixed combination of a homogeneous labor (\(L\)) input with homogeneous fixed business capital (\(K_f\)). 
 For simplicity, we put technological progress, depreciation and goods inflation aside so investment is presented in net terms and all variables --- except for houses --- are measured in real terms.
@@ -338,7 +334,7 @@ Change in loans     & &$+\Delta L_{k}$&&$+\Delta L_f$& &$-\Delta L$& 0\\
 
 
 \subsection{Firms}
-\label{sec:org9fdd3e2}
+\label{sec:orgaf52388}
 
 In order to produce, firms purchase capital goods (\(-I_f\) in capital account) and hire workers, whom total remuneration is the economy wage bill. 
 Their total profits (\(FT\)) are a residual between sales (\(Y\)) and total wages (\(W\)). 
@@ -399,7 +395,7 @@ r_n = r_g - r_l\cdot\frac{L_{f_{-1}}}{K_f}
 where \(r_g\) and \(r_n\) denotes gross and net profit rate respectively.
 
 \subsection{Banks}
-\label{sec:orgcb2c814}
+\label{sec:orgd713e6b}
 
 As in most part of SFC literature, banks do not have an active role in this model.
 They create money as credit is demanded and just after they collect deposits \cite{le_bourva_money_1992}. 
@@ -436,10 +432,10 @@ $$
 \end{equation}
 
 \subsection{Households}
-\label{sec:org9ac1da9}
+\label{sec:org650db20}
 
 \subsubsection*{Workers}
-\label{sec:org1bd83c3}
+\label{sec:org1475a0b}
 As mentioned before, we assume that workers expend (\(C_w\)) what they earn (\(W\)). 
 For simplicity, we consider that wages are the only source of income workers' disposable income (\(YD_{w}\)) and do not have access to consumption loans, so worker' saving (\(S_{hw}\)) are null.
 Therefore, accordingly to our hypothesis, workers' do not hold both net financial and total wealth (\(V_{w}\)).
@@ -464,7 +460,7 @@ V_{w} = 0
 \end{equation}
 
 \subsubsection*{Capitalists}
-\label{sec:org0e5e5c0}
+\label{sec:orgf522649}
 This is the most complex institutional sector of our model. 
 We assume consumption (\(C_k\)) is fully-autonomous and financed by loans (\(L_{k}\)). 
 Disposable income (\(YD_k\)) is the sum of distributed profits and received interests on deposits, net of interests payments
@@ -507,11 +503,11 @@ Next, we present residential investment growth rate (\(g_{I_h}\)) as determined 
 
 
 \begin{equation}
-    I_h = (1 + g_{I_h})\cdot Ih_{-1}
+	I_h = (1 + g_{I_h})\cdot I_{h_{-1}}
 \end{equation}
 \begin{equation}
-\label{g_Z_own}
-g_{I_h} = \phi_0 - \phi_1\cdot own
+	\label{g_Z_own}
+	g_{I_h} = \phi_0 - \phi_1\cdot own
 \end{equation}
 where  \(\phi_0\) represents long-term determinants of residential investment (\emph{e.g.} demographic factors, housing and credit policies, etc.)\footnote{For an early discussion about long-term determinants of residential investment see \textcite{grebler_capital_1956}. For a historical-institutional discussing of mortgage markets, see \textcite{green_american_2005}.} while \(\phi_1\) captures the demand for housing arising from expectations of capital gains resulting from speculation with flow of new houses. 
 
@@ -560,11 +556,11 @@ In the next Section, we present the short-run and fully-adjusted position dynami
 
 
 \section{Short and long-run equilibria}
-\label{sec:orga675ea6}
+\label{sec:orgba086f9}
 \label{sec:runs}
 In this Section, we show the implications residential investment inclusion into a SSM-SFC model. First, we present the short-run dynamics and then move to the fully-adjusted position (denoted by \(\star\)).
 \subsection{Short-run good market equilibrium}
-\label{sec:org95ee965}
+\label{sec:org3607c02}
 \label{short}
 
 In this model, real output (equation \ref{_Y}) is the sum of household consumption (equation \ref{_Ct}) and both types of investment (equation \ref{_It}). 
@@ -601,7 +597,7 @@ k = \frac{(1-R)\cdot (1-h_t - \omega)}{h_t + (1-R)\cdot (1-h_t - \omega)}
 \end{equation}
 
 \subsection{Traverse and long-run equilibrium}
-\label{sec:org9f9cc6e}
+\label{sec:org6ece365}
 \label{long}
 
 In this subsection, we present traverse and long-run equilibrium equations.
@@ -632,12 +628,12 @@ Finally, replacing Equation \ref{h_long} into Equation \ref{Y_nivel} we obtain l
 
 \begin{equation}
 \label{Y_lr}
-Y^{\star} = \frac{Z}{1 - \omega - g^{\star}\cdot \frac{v}{u^{\star}}}
+Y^{\star} = \frac{Z}{\left(1 - \omega - g^{\star}\cdot \frac{v}{u^{\star}}\right)}
 \end{equation}
 Once again, we can show the long-run position making the residential investment growth rate explicit as in Equation \ref{Y_gIh}
 \begin{equation}
 \label{Y_gIh}
-Y^{\star} = \frac{I_h}{(1-R)(1 - \omega - g_{I_h}^{\star}\cdot \frac{v}{u^{\star})}}
+Y^{\star} = \frac{I_h}{\left(1-R\right)\left(1 - \omega - g_{I_h}^{\star}\cdot \frac{v}{u^{\star}\right)}}
 \end{equation}
 
 Next, we move towards the analysis of the particularities of our model:  one of the NCC autonomous expenditures also contributes to total capital stock.  
@@ -716,7 +712,7 @@ m\textsuperscript{\(\star\)} = mo\textsuperscript{\(\star\)}\(\cdot\) k\textsupe
 
 
 \section{Numerical Simulations}
-\label{sec:org3ec702c}
+\label{sec:org470f3e3}
 \label{sec:Experiments}
 \label{sec:Experiments}
 In this Section, we present the results of the following experiments: 
@@ -729,7 +725,7 @@ Our first experiment assess if income distribution has a level effect on output 
 Real estate inflation increase experiment is motivated by recent US experience (from 1992 to 2019) as discussed in Section \ref{sec:empirical} while the last simulation aims to evaluate indebtedness stability.
 Table \ref{tab:param} in Appendix \ref{append:Data} presents the parameters of simulation and Table \ref{ResumoChoques} compare each result to baseline.
 \subsection{Wage-share decrease}
-\label{sec:org0c928d3}
+\label{sec:org197fce3}
 \label{sec:Exp1}
 
 A wage-share decrease has permanent negative impact on output level --- due to changes on the supermultiplier --- and temporary negative effects on degree of capacity utilization (see Figure \ref{fig:results_1} A).
@@ -760,10 +756,9 @@ As a consequence of the initially lower accumulation rate and higher profit shar
 Thus, according to Equation \ref{Long_netprofit_ratio}, gross and net profit rate remain persistently close to each other (see Figure \ref{fig:results_2} D).
 Therefore, as profits distribution policy remains the same, firms require less external funding so its indebtedness decreases.
 
-\textbf{Nota:} Farei referência às equações stock/flow quando terminar esta seção
 
 \subsection{Real estate inflation increase}
-\label{sec:org8195d9b}
+\label{sec:org5b462db}
 \label{sec:Exp2}
 
 
@@ -790,9 +785,9 @@ Additionally, this result is in line with SSM literature.
 Firms investment follows capital stock adjustment principle, so a higher firms investment growth rate implies that
 GDP grows faster than residential investment.
 Thus, both residential investment share on GDP and degree of capacity  utilization decrease.
-In other words, both autonomous expenditures share on GDP and houses share on real assets (see Equation \ref{partial_pi}) decline as a result of the already described non-residential investment positive reaction.
+In other words, both autonomous expenditures share on GDP and houses share on real assets decline as a result of the already described non-residential investment positive reaction.
 \subsection{Interest rate increase}
-\label{sec:orge15ee92}
+\label{sec:org5681910}
 \label{sec:Exp3}
 
 A increase in benchmark interest rate  has a persistent effect on long-run growth rate since houses own interest rate increases as well\footnote{Since we assume null spread on both mortgage and loans interest rate, an increase on deposits interest rate also increases the other ones. As a consequence, banks' net financial wealth remains unchanged.}.
@@ -809,7 +804,6 @@ Regarding firms' balance sheet, we report a temporarily negative level effect on
 So, there is a permanent increase in the gap between them due to increase in external funding and to the negative level effect on profits.
 Therefore, we find a stable debt dynamics for both capitalists and firms (other parameters remaining unchanged).
 
-\textbf{Nota:} Atualizar resultado do endividamento capitalista na tabela assim que for revisado.
 
 \begin{table}[H]
 	\centering
@@ -852,7 +846,7 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 
 
 \subsection{Plugging real data}
-\label{sec:orgbbf1d7c}
+\label{sec:org0bf2277}
 \label{real_sim}
 
 Finally, we include houses own interest rate data  discussed in section \ref{sec:empirical} (see Figure \ref{propria_investo}) into our model.
@@ -882,7 +876,7 @@ Together these results provide a first step towards the connection between asset
 
 
 \section{Concluding Remarks}
-\label{sec:org0055fa5}
+\label{sec:org14b7292}
 \label{sec:Conclusion}
 This paper contributes to demand-led growth agenda, taking in consideration recent efforts of embedding it in a SFC framework.
 Our novelty is the introduction of residential investment determined by houses own rate of interest in a SSM-SFC model.
@@ -906,23 +900,23 @@ Nevertheless, this is a first step in a wider research agenda on the role of res
 
 
 \section*{Acknowledgments}
-\label{sec:org09918f9}
+\label{sec:org00223ca}
 \noindent We  are  grateful  to  Lídia  Brochier,  Carolina  Baltar,  Franklin  Serrano  for  discussions,  as  well  as  comments  by  the participants of Cecon/Unicamp and UFRJ Political Economy research seminars and the participants of XII AKB meeting, 20th FMM forum, and 46th EEA Annual Conference. Any remaining errors are, of course, our own.
 
 \section*{Disclosure statement}
-\label{sec:org793fd61}
+\label{sec:org1598469}
 No potential conflict of interest was reported by the authors.
 
 
 \section*{References}
-\label{sec:org14d3b7c}
+\label{sec:org273f802}
 \printbibliography[heading=none]
 
 
 \appendix
 
 \section{Numerical Appendix}
-\label{sec:org1b9d5cb}
+\label{sec:org2e58334}
 \label{append:Data}
 
 
