--- a/Articles/SFC/Simulation.org
+++ b/Articles/SFC/Simulation.org
@@ -4,7 +4,7 @@ bibliography:refs.bib
 
 ** General config
 
-#+PROPERTY: header-args:python :session SFC  :exports none :results output :eval yes :cache no :async t :tangle ./codes/SFC_setup.py :python /usr/bin/python3.8 :eval never-export
+#+PROPERTY: header-args:python :session SFC  :exports none :results output :cache no :tangle ./codes/SFC_setup.py :python /usr/bin/python3.8 :eval never-export
 
 #+BEGIN_SRC python 
 from pysolve3.model import Model
@@ -15,6 +15,7 @@ t1 = datetime.now()
 
 import pandas as pd
 import numpy as np
+from scipy.stats.mstats import gmean
 import matplotlib.pyplot as plt
 import matplotlib.patheffects as pe
 import seaborn as sns
@@ -388,10 +389,6 @@ def other_plots(shock, df):
 #+END_SRC
 
 #+RESULTS:
-: Python 3.8.5 (default, Jul 28 2020, 12:59:40) 
-: [GCC 9.3.0] on linux
-: Type "help", "copyright", "credits" or "license" for more information.
-: python.el: native completion setup loaded
 
 
 ** Increase in autonomous growth rate ($g_Z$)
@@ -914,11 +911,19 @@ fig.savefig("./figs/Compared_Shocks_2.png", dpi = 600)
 
 *** Simulation   
 #+BEGIN_SRC python :tangle ./codes/Simulation.py
+data = pd.read_csv("./data/OwnInterestRate_data.csv", parse_dates=True, index_col=[0])
 
-gCk = data["1992-01-01":]["$g_{I_h}$"].mean().round(3) # Média geométrica
+
+def geo_mean(iterable):
+    a = np.array(iterable)
+    return a.prod() ** (1.0 / len(a))
 
 
-df = SolveSFC(model(real=1, gC=gCk, R = 0.0), time=initial)
+gCk = geo_mean(data["1992-01-01":]["$g_{I_h}$"].to_list()).round(3)  # Geometric average
+
+initial = 1000
+shock_duration=10
+df = SolveSFC(model(real=1, gC=gCk, R=0.0), time=initial)
 base = model()
 SolveSFC(base, time=initial, table=False)
 
@@ -928,101 +933,159 @@ for i in data.index:
     for j in lagged:
         del base.solutions[-1][j]
     base.set_values(base.solutions[-1])
-    base.set_values({
-            'own':data['Own interest rate'][i],
-            'infla':data['Inflation'][i],
-            'rm':data['Mortgage interest rate'][i], # Changed to rm instead of rmo
-            'real_data': 1.0,
-            'R': 0.0,
-            'gC': gCk,
-        })
-    try: 
+    base.set_values(
+        {
+            "own": data["Own interest rate"][i],
+            "infla": data["Inflation"][i],
+            "rm": data["Mortgage interest rate"][i],  # Changed to rm instead of rmo
+            "real_data": 1.0,
+            "R": 0.0,
+            "gC": gCk,
+        }
+    )
+    try:
         SolveSFC(base, time=shock_duration, table=False)
     except Exception as e:
-        #print(f'For time = {i}, {e}')
+        # print(f'For time = {i}, {e}')
         pass
-    
+
 shock = SFCTable(base)[initial:]
-shock["Z/Y"] = shock["Z"]/shock["Y"]
+shock["Z/Y"] = shock["Z"] / shock["Y"]
+shock["Ih/Y"] = shock["I_h"] / shock["Y"]
 #+END_SRC
+
+#+RESULTS:
+
+
 
 *** Plots
 
 #+BEGIN_SRC python :tangle ./codes/Simulation.py :results graphics
 base = model()
 df = SolveSFC(base, time=1000)
-df["Z/Y"] = df["Z"]/df["Y"]
+df["Z/Y"] = df["Z"] / df["Y"]
+df["Ih/Y"] = df["I_h"] / df["Y"]
 df_base = df
 
-shock["TIME"] = [i+1 for i in range(len(shock.index))]
+shock["TIME"] = [i + 1 for i in range(len(shock.index))]
 
 # First shock
-fig, ax = plt.subplots(2,2, figsize=(19.20,10.80))
+fig, ax = plt.subplots(2, 2, figsize=(19.20, 10.80))
 
 shock["$I_{h}$"] = shock["I_h"]
 shock["$I_{f}$"] = shock["I_f"]
 
-shock[['Y', '$I_{h}$', '$I_{f}$']].pct_change().plot(ls ='-', lw=3, ax = ax[0,0], color=("tab:blue", "tab:red", "tab:green"))
-ax[0,0].axhline(y = df_base['g_Z'].iloc[-1], ls ='--', lw=1, color = "black", label = "Baseline")
-ax[0,0].ticklabel_format(useOffset=False)
-ax[0,0].set_title('A Selected growth rates')
+shock[["Y", "$I_{h}$", "$I_{f}$"]].pct_change().plot(
+    ls="-", lw=3, ax=ax[0, 0], color=("tab:blue", "tab:red", "tab:green")
+)
+ax[0, 0].axhline(
+    y=df_base["g_Z"].iloc[-1], ls="--", lw=1, color="black", label="Baseline"
+)
+ax[0, 0].ticklabel_format(useOffset=False)
+ax[0, 0].set_title("A Selected growth rates")
 
-shock['Z/Y'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,0])
-ax[1,0].axhline(y = df_base['Z/Y'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
-ax[1,0].ticklabel_format(useOffset=False)
-ax[1,0].set_title('C Autonomous Expenditure\nShare on GDP ($Z/Y$)')
+shock["Z/Y"].plot(ls="-", lw=3, color="black", label="Real data", ax=ax[1, 0])
+ax[1, 0].axhline(
+    y=df_base["Z/Y"].iloc[-1], ls="--", lw=1.5, color="lightgray", label="Baseline"
+)
+ax[1, 0].ticklabel_format(useOffset=False)
+ax[1, 0].set_title("C Autonomous Expenditure\nShare on GDP ($Z/Y$)")
 
-shock['u'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[0,1])
-ax[0,1].axhline(y = df_base['u'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
-ax[0,1].ticklabel_format(useOffset=False)
-ax[0,1].set_title('B Capacity utilization rate ($u$)')
+shock["u"].plot(ls="-", lw=3, color="black", label="Real data", ax=ax[0, 1])
+ax[0, 1].axhline(
+    y=df_base["u"].iloc[-1], ls="--", lw=1.5, color="lightgray", label="Baseline"
+)
+ax[0, 1].ticklabel_format(useOffset=False)
+ax[0, 1].set_title("B Capacity utilization rate ($u$)")
 
-#shock['h'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,1])
-#ax[1,1].axhline(y = df_base['h'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
-#ax[1,1].ticklabel_format(useOffset=False)
-#ax[1,1].set_title('Marginal propsenty\nto invest ($h$)')
+# shock['h'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,1])
+# ax[1,1].axhline(y = df_base['h'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
+# ax[1,1].ticklabel_format(useOffset=False)
+# ax[1,1].set_title('Marginal propsenty\nto invest ($h$)')
 
-sns.scatterplot(y = 'Z/Y', x='u', data=shock, size="TIME", sizes = (1,100), color = 'black', legend=False, ax=ax[1,1])
+sns.scatterplot(
+    y="Z/Y",
+    x="u",
+    data=shock,
+    size="TIME",
+    sizes=(1, 100),
+    color="black",
+    legend=False,
+    ax=ax[1, 1],
+)
 
-sns.lineplot(y = 'Z/Y', x='u', data=shock, sort=False, color = 'black', ax=ax[1,1], legend=False)
-ax[1,1].set_title('D Share of residential investment and capacity utilization\n(Dots size grow in time)')
+sns.lineplot(
+    y="Z/Y", x="u", data=shock, sort=False, color="black", ax=ax[1, 1], legend=False
+)
+ax[1, 1].set_title(
+    "D Share of residential investment and capacity utilization\n(Dots size grow in time)"
+)
 
 
 sns.despine()
-plt.tight_layout(rect=[0, 0.03, .85, 0.95])
-#ax[1,1].legend(loc='center left', bbox_to_anchor=(1.0, 1.25))
-#plt.show()
-fig.savefig("./figs/Real_Shocks_1.png", dpi = 600)
+plt.tight_layout(rect=[0, 0.03, 0.85, 0.95])
+# ax[1,1].legend(loc='center left', bbox_to_anchor=(1.0, 1.25))
+# plt.show()
+fig.savefig("./figs/Real_Shocks_1.png", dpi=600)
 
 
 # Second Shock
-fig, ax = plt.subplots(2,2, figsize=(19.20,10.80))
+fig, ax = plt.subplots(2, 2, figsize=(19.20, 10.80))
 
-sns.scatterplot(y = 'Z/Y', x='u', data=shock, size="TIME", sizes = (1,100), color = 'black', legend=False, ax=ax[0,0])
+sns.scatterplot(
+    y="Z/Y",
+    x="u",
+    data=shock,
+    size="TIME",
+    sizes=(1, 100),
+    color="black",
+    legend=False,
+    ax=ax[0, 0],
+)
 
-sns.lineplot(y = 'Z/Y', x='u', data=shock, sort=False, color = 'black', ax=ax[0,0])
-ax[0,0].set_title('A Share of residential investment and capacity utilization\n(Dots size grow in time)')
+sns.lineplot(y="Z/Y", x="u", data=shock, sort=False, color="black", ax=ax[0, 0])
+ax[0, 0].set_title(
+    "A Share of residential investment and capacity utilization\n(Dots size grow in time)"
+)
 
-shock['K_k'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[0,1])
-ax[0,1].axhline(y = df_base['K_k'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
-ax[0,1].ticklabel_format(useOffset=False)
-ax[0,1].set_title('B Houses share on\nReal Assets ($K_k$)')
+shock["K_k"].plot(ls="-", lw=3, color="black", label="Real data", ax=ax[0, 1])
+ax[0, 1].axhline(
+    y=df_base["K_k"].iloc[-1], ls="--", lw=1.5, color="lightgray", label="Baseline"
+)
+ax[0, 1].ticklabel_format(useOffset=False)
+ax[0, 1].set_title("B Houses share on\nReal Assets ($K_k$)")
 
-((shock["DN"]*shock["rm"][2:])/shock['YDk'][2:]).plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,0])
-ax[1,0].axhline(y = ((df_base["DN"].iloc[-2]*df_base["rm"].iloc[-1])/df_base['YDk'].iloc[-1]), ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
-ax[1,0].ticklabel_format(useOffset=False)
-ax[1,0].set_title('C Capitalist Indebtedness\n(as % $YD_k$)')
+((shock["DN"] * shock["rm"][2:]) / shock["YDk"][2:]).plot(
+    ls="-", lw=3, color="black", label="Real data", ax=ax[1, 0]
+)
+ax[1, 0].axhline(
+    y=((df_base["DN"].iloc[-2] * df_base["rm"].iloc[-1]) / df_base["YDk"].iloc[-1]),
+    ls="--",
+    lw=1.5,
+    color="lightgray",
+    label="Baseline",
+)
+ax[1, 0].ticklabel_format(useOffset=False)
+ax[1, 0].set_title("C Capitalist Indebtedness\n(as % $YD_k$)")
 
-(shock['Fn']/shock['K_f']).plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,1])
-ax[1,1].axhline(y = (df_base['Fn']/df_base['K_f']).iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
-ax[1,1].ticklabel_format(useOffset=False)
-ax[1,1].set_title('D Net profit rate')
+(shock["Fn"] / shock["K_f"]).plot(
+    ls="-", lw=3, color="black", label="Real data", ax=ax[1, 1]
+)
+ax[1, 1].axhline(
+    y=(df_base["Fn"] / df_base["K_f"]).iloc[-1],
+    ls="--",
+    lw=1.5,
+    color="lightgray",
+    label="Baseline",
+)
+ax[1, 1].ticklabel_format(useOffset=False)
+ax[1, 1].set_title("D Net profit rate")
 
 sns.despine()
-plt.tight_layout(rect=[0, 0.03, .85, 0.95])
-ax[1,1].legend(loc='center left', bbox_to_anchor=(1.0, 1.25))
-#plt.show()
-fig.savefig("./figs/Real_Shocks_2.png", dpi = 600)
+plt.tight_layout(rect=[0, 0.03, 0.85, 0.95])
+ax[1, 1].legend(loc="center left", bbox_to_anchor=(1.0, 1.25))
+# plt.show()
+fig.savefig("./figs/Real_Shocks_2.png", dpi=600)
 #+END_SRC
 
 #+RESULTS:
@@ -1088,7 +1151,6 @@ As a consequence of the initially lower accumulation rate and higher profit shar
 Thus, according to Equation ref:Long_netprofit_ratio, gross and net profit rate remain persistently close to each other (see Figure ref:fig:results_2 D).
 Therefore, as profits distribution policy remains the same, firms require less external funding so its indebtedness decreases.
 
-*Nota:* Farei referência às equações stock/flow quando terminar esta seção
 
 ** Real estate inflation increase
 #+LATEX: \label{sec:Exp2}
@@ -1117,7 +1179,7 @@ Additionally, this result is in line with SSM literature.
 Firms investment follows capital stock adjustment principle, so a higher firms investment growth rate implies that
 GDP grows faster than residential investment.
 Thus, both residential investment share on GDP and degree of capacity  utilization decrease.
-In other words, both autonomous expenditures share on GDP and houses share on real assets (see Equation ref:partial_pi) decline as a result of the already described non-residential investment positive reaction.
+In other words, both autonomous expenditures share on GDP and houses share on real assets decline as a result of the already described non-residential investment positive reaction.
 
 
 
@@ -1148,7 +1210,6 @@ Regarding firms' balance sheet, we report a temporarily negative level effect on
 So, there is a permanent increase in the gap between them due to increase in external funding and to the negative level effect on profits.
 Therefore, we find a stable debt dynamics for both capitalists and firms (other parameters remaining unchanged).
 
-*Nota:* Atualizar resultado do endividamento capitalista na tabela assim que for revisado.
 
 ** Summary                                                     :ignore:
 *** Table                                                            :ignore:
