--- a/Articles/SFC/Versoes/Historico.org
+++ b/Articles/SFC/Versoes/Historico.org
@@ -376,15 +376,15 @@ Nenhuma alteração
 * Versão <2020-12-11 sex>
 
 
-- [ ] Média geométrica nas simulações reais
-- [ ] Atualizar bibliografias
+- [X] Média geométrica nas simulações reais
+- [X] Atualizar bibliografias
   + cite:girardi_autonomous_2015
   + cite:haluska_growth_2019
-- [ ] Gráfico da taxa própria com tracejados
-- [ ] Checar subescritos
-- [ ] Remover apêndice A e referências
+- [X] Gráfico da taxa própria com tracejados
+- [X] Checar subescritos
+- [X] Remover apêndice A e referências
 - [ ] Atualizar agradecimentos
-- [ ] Pente fino
+- [ ] Pente fino inglês
 
 * Referências
   :PROPERTIES:
