--- a/Materias/2S2020/PED_CE342/Aulas/Atas.org
+++ b/Materias/2S2020/PED_CE342/Aulas/Atas.org
@@ -571,3 +571,109 @@ Apesar de algumas continuidades, o governo Lula promoveu um ineditismo históric
 Tal resultado --- levado adiante pelo governo Dilma --- decorre tanto da questão social quando do abandono progressivo do conservadorismo fiscal, reposicionando o papel do Estado no desenvolvimento.
 Em conjunto, tais medidas promoveram uma dinamização do mercado interno e modernização da demanda que não foi acompanhada igualmente pela estrutura produtiva.
 De modo a superar tais desafios, adotou-se uma agenda industrialista que, por sua vez, não foi industrializante.
+
+** Governo Dilma - Fase 1
+*** Introdução
+
+No primeiro governo Dilma temos como marco o Estado na posição de ator central na estratégia de crescimento e a utilização de políticas econômicas para incentivar o capital privado e defender a expansão econômica.
+Na estratégia oficial do governo existia o reconhecimento da indústria como elemento basilar do crescimento e a importante tarefa de recuperar a competitividade industrial.
+O foco foi defender a competitividade da indústria mantendo o câmbio num patamar favorável e buscando reduzir os custos decorrentes da precária infraestrutura do país e da carga tributária.
+Logo manteve-se a estratégia delineada no governo Lula, não se alterando o papel atribuído ao Estado, mas ocorreram algumas mudanças na condução das políticas macroeconômicas.
+
+Após a trajetória de crescimento durante o ano eleitoral, com aceleração da inflação e forte expansão do crédito, em 2011 o governo Dilma teve como primeiros movimentos medidas macroeconômicas contracionistas, centradas no corte de gastos do governo, aumento das taxas básicas de juros e “medidas macro prudenciais” para o controle do crédito.
+Da perspectiva externa, entre 2011-14 o bom cenário externo do miniciclo das commodities de 2010 cedeu.
+O valor das exportações brasileiras em dólares, que subiu quase continuamente entre 2004-11, caiu 12% entre 2011-14.
+Com a ausência do drive externo, tá eficou a cargo da política econômica doméstica estimular o crescimento, via incentivos ao investimento privado.
+Parcela relevante deste estímulo recaiu à política fiscal.
+*** Política fiscal
+- Para a política fiscal, a opção do governo não foi retomar os investimentos públicos, como realizado nos Governos Lula. O governo acabou optando pela promoção do investimento privado por meio de uma série de isenções fiscais, que se realizaram de modo descoordenado para setores produtivos específicos.
+- Devemos ter em mente que essa extensa política de isenção tributária reduzia as receitas do Estado e prejudicava o seu financiamento. Além disso, à queda de receitas pelas desonerações somou-se uma menor arrecadação, que resultaram em uma piora progressiva das contas fiscais.
+ - Todavia, o investimento privado não reagiu à política de isenção tributária. Visto que o investimento público também não cresceu e que a economia não recebia mais o impulso das exportações, o investimento agregado iniciou uma trajetória de baixos resultado, que se tornaram negativos em 2014, quando a variação média trimestral foi -1,47%.
+*** Política cambial
+- A política cambial também sinalizou mudanças de orientação. O esforço da era Lula de evitar a valorização cambial trouxe pouco resultado prático e a indústria conviveu com taxa de câmbio desfavorável à sua capacidade de competição internacional. A decisão de intervir no mercado de derivativo, levada adiante em meados de 2011, alterou o cenário e a taxa de câmbio passou a oscilar acima de R$ 2,00, com uma política, assumidamente, de flutuação suja.
+- Assim, no primeiro ano do governo Dilma, o acúmulo de reservas internacionais, controles de capitais e operações de swaps cambiais foram ampliados visando reverter a trajetória de apreciação. Com essas ações, a moeda se depreciou no período, também ajudada pela redução da taxa básica de juros e pela deterioração do cenário externo com a crise do Euro. Mas, a desvalorização do câmbio entre 2011 e 2014 foi insuficiente para compensar sua apreciação no período 2003-10 e estimular as exportações e o investimento privado.
+- A apreciação do Real promoveu uma redução do lucro no setor da indústria e agricultura (bens tradables), atuando também como um inibidor do investimento, particularmente na indústria de transformação que, por sua vez, é o motor do crescimento a longo prazo.
+- Por outra perspectiva, o câmbio apreciado e a política de estímulo ao consumo resultaram em uma crescente importação de bens de consumo.
+- Quando consideramos o teto para o aumento do investimento decorrente do câmbio apreciado, e com crescente importação de bens de consumo, houve reprimarização da estrutura produtiva e da pauta de exportações da economia brasileira.
+-  Ajudado pela apreciação da TCR, o déficit em transações correntes pulou de 2,9% do PIB em 2011 para 4,2% em 2014 (BCB, 2018), elevando a fragilidade externa da economia.
+- Em suma, as políticas de crédito, sociais e salarial, juntamente com o miniciclo das exportações (até 2011, neste caso) impulsionaram em alguma medida a economia, mas a TCR permaneceu apreciada, levando à deterioração dos lucros e das transações correntes, além de impor um teto para o investimento privado e, consequentemente, para os ganhos de produtividade.
+*** Política monetária
+Em seu primeiro ano, o governo Dilma apostou numa mudança na política monetária.
+Medidas macroprudenciais de controle do crédito foram adotadas
+A conjuntura do final de 2012 revelou-se favorável e o Banco Central, contrariando a expectativa de mercado, desencadeou o processo de redução dos juros aproveitando o cenário internacional e a baixa pressão dos preços internos.
+Assim a taxa Selic foi reduzida de 12,5% para 7,25% entre agosto de 2011 e outubro de 2012.
+- Entre 2012 e início de 2013, a taxa de juros futura marcada a mercado seguiu a Selic. Ou seja, o BC conseguiu difundir no mercado financeiro a convenção de que a política monetária teria êxito, levando os agentes a precificarem juros futuros menores. Porém, após um acompanhamento pari passu ao longo do segundo semestre de 2012, no início de 2013 a taxa de juros futura de mercado se descolou da Selic, sinalizando que a convenção sobre política monetária estava mudando, dado o aumento da inflação esperada
+-  Ao invés de elevar a Selic, revertendo parcialmente sua queda, o governo optou por acomodar a inflação por meio de controle de preços administrados, principalmente petróleo e derivados, e mudando unilateralmente contratos de energia elétrica. Neste contexto, o BC passou a perseguir o teto da meta de inflação ao invés do seu centro.
+-  Não obstante, provavelmente por causa das eleições em 2014, o BC demorou para aumentar a Selic, fazendo persistir a discrepância entre os juros básicos e a taxa futura marcada a mercado, ajudando a deteriorar ainda mais a convenção sobre uma pior inflação futura. Quando o BC finalmente aumentou os juros, a convenção já era tão negativa que ele foi obrigado a realizar forte aumento da Selic e a mantê-la elevada mesmo com a economia entrando em recessão, ao longo de 2015 e 2016, criando um elevado custo de oportunidade para o investimento no momento em que o país muito necessitava dele
+*** Desaceleração do crescimento
+-  Importa notar que a tendência de queda se verifica antes dos choques que abalam a economia brasileira, como a operação Lava Jato, a crise hídrica, a queda dos preços internacionais das commodities, que ocorrem a partir de 2014 – o miniciclo de aumento dos preços das commodities ocorreu até 2011, mas a forte queda de seus preços deu-se em 2014.
+- o que se verificou de 2011 em diante foi um arrefecimento da dinâmica de crescimento de consumo e exportações em relação ao período 2004-2010, com queda na taxa de investimento, que passou a apresentar patamares negativos a partir do segundo semestre de 2014.
+
+Essa desaceleração pode ser atribuída a múltiplas causas:
+- Falhas na condução na política econômica, que promoveram, por exemplo, contração no consumo das famílias. No consumo, o endividamento das famílias se elevou e, após o choque de juros e a concorrência forçosa no sistema bancário, por meio do uso dos bancos públicos para praticarem menores juros de varejo no mercado de crédito e no financiamento imobiliário, os bancos privados restringiram crédito – tanto que, entre 2013-2014, antes da crise portanto, os bancos privados reduzem sua participação relativa no total de ativos detidos pelo sistema bancário no Brasil (Brasil, 2019). Assim, em âmbito geral, o consumo via crédito perdeu ritmo, comprometendo as taxas de expansão do consumo agregado.
+
+Fatores internacionais (somado a falhas na condução da política econômica), como a Crise do Euro, a redução do ritmo de crescimento chinês, o fim do miniciclo de commodities e o patamar cambial, agiram estabilizando os preços das exportações brasileiras ao mesmo tempo que as importações se expandiram, deteriorando as contas externas e enfraquecendo a indústria nacional.
+- Fatores políticos (desde as manifestações de 2013 até a incerteza eleitoral de 2014), fatores internacionais
+-  Fatores institucionais ou jurídicos, particularmente o avanço da operação Lava Jato que afetou setores estratégicos da economia brasileira, como petróleo e gás, construção civil e indústria naval.
+
+Portanto, a desaceleração da taxa de crescimento econômico a partir de 2011, o que não quer dizer recessão, veio do arrefecimento do crescimento das exportações e do consumo privado. Isto é, a demanda agregada cresceu a uma velocidade menor e implicou menor ritmo de aumento do produto, mas ainda se tinha crescimento.
+
+** Segundo Governo Dilma
+*** Virada para uma política econômica ortodoxa em 2015
+Em 2015, diante da fragilidade e dos desequilíbrios da economia brasileira, o governo optou por um choque recessivo ou, em outras palavras, lançou mão de um conjunto de políticas de austeridade econômica. De acordo com o diagnóstico então dominante, o objetivo desse “ajuste” era enfrentar, de uma só vez, os “desequilíbrios” da economia brasileira. Esses desequilíbrios diziam respeito tanto às contas públicas quanto à rentabilidade de alguns setores.
+
+Dentre os principais elementos desse choque recessivo, que marca uma virada da política econômica, estavam o choque fiscal, o choque de preços administrados, o choque cambial e o choque monetário
+*** Choque fiscal
+Após a reeleição de Dilma Rousseff em 2014, o Ministério da Fazenda propôs uma meta de superávit primário de 1,2% do PIB para 2015, optando por uma mudança radical na política econômica, com consolidação fiscal baseada principalmente em corte dos gastos públicos e, logo em maio de 2015, o governo anunciou um contingenciamento de cerca de R$ 80 bilhões.
+
+Em 2015 o governo tentou implementar um programa de consolidação fiscal baseado em corte de gastos, ao invés de reorganizar suas contas aumentando impostos sobre renda de pessoa física e propriedade e substituindo gastos correntes por investimento. No âmbito de desaceleração/recessão econômica, mesmo um necessário ajuste fiscal tende a não ter êxito quando feito através do corte de gastos: nesta conjuntura deteriorada, menores gastos públicos desestimulam a atividade econômica e mitigam a própria arrecadação do governo, enquanto que agentes privados optarão por ativos líquidos, postergando investimentos. Ou seja, o ajuste fiscal poderia contribuir para a construção de convenções mais críveis na política econômica, mas, dada a natureza do ajuste proposto, dificilmente ele ajudaria a se formarem convenções pró-investimento, pois, por si, ele significava expectativas de menor demanda agregada.
+Em meio à recessão, que traz receitas públicas cadentes, e à rigidez dos gastos públicos, tanto 2015 quanto 2016 foram anos de déficit público, isto é, a consolidação fiscal falhou.
+*** Choque cambial
+Após as eleições de 2014 ocorre uma inflexão na política cambial, quando a nova equipe econômica sinaliza ao mercado o fim do programa de leilões de swaps e uma política cambial menos atuante. A moeda brasileira já vinha se desvalorizando no segundo semestre de 2014, tendência que se reforça com a nova postura de política cambial. Em janeiro de 2014 a taxa de câmbio média foi de 2,63 R$/US$, enquanto no mesmo mês de 2015 a taxa média foi de 4,05 R$/US$, o que representou uma desvalorização de mais de 50% do real em relação ao dólar (Figura 1). Essa rápida mudança na taxa de câmbio teve impacto nas estruturas de custos e patrimonial das empresas, contribuiu para o aumento da taxa de inflação e com isso para a redução dos salários reais, impactando negativamente o consumo. Além disso, essa mudança encareceu a cesta de produtos que compõe o investimento.
+*** Choque de preços administrados
+
+Diante do represamento de preços administrados pelo setor público, como energia e gasolina, o governo optou por uma estratégia de choque em detrimento de uma estratégia gradualista. O conjunto de preços monitorados do IPCA teve alta de 18% em 2015, o que contribuiu diretamente e indiretamente para a inflação do período, que foi superior a 10% (Figura 1). Esse tipo de reajuste tem um alto grau de difusão em uma economia muito indexada, na qual a formação de preços é extremamente oligopolizada e conta com um alto grau de repasses de custos para o consumidor. Nesse sentido, o choque de preços administrados foi mais um elemento de pressão de custos para empresas e de redução de renda real para as famílias.
+*** Choque monetário
+Diante de uma inflação essencialmente provocada pelo próprio governo, quando ajustou preços administrados e permitiu uma forte desvalorização cambial, o Banco Central deu continuidade aos aumentos na taxa básica de juros até o patamar de 14,25%. Já a taxa média de juros das operações de crédito aumentou de 25% em janeiro de 2015 para 31% em janeiro do ano seguinte (Figura 1) como reflexo não apenas das expectativas quanto ao ciclo da taxa de juros básica, mas também do aumento do risco para o setor bancário. Esse aumento do custo do crédito (e do custo de oportunidade para o investimento produtivo) é outro fator que contribuiu para o cenário contracionista.
+
+- Se, por um lado, é certo que economia brasileira já vinha com dificuldades e em desaceleração progressiva até 2014, por outro lado é de grande importância entender o aprofundamento da crise a partir dos choques recessivos e as políticas de austeridade.
+- A taxa de investimento, cujo pico fora 20,9% do PIB em 2013, caiu para 17,8% em 2015, enquanto que o crescimento econômico foi de -3,5% naquele ano e -3,3% em 2016.
+
+** Governo Temer e Bolsonaro
+*** Diretrizes gerais
+Desde o Governo Temer, a partir de maio de 2016, até o Governo Bolsonaro, a partir de janeiro de 2019, houve uma mudança profunda na condução da política econômica, por meio da implementação de políticas ortodoxas e da realização de reformas liberalizantes. Assim, podemos dizer que existe um sentido de continuidade entre a política econômica de Temer/Meirelles e de Bolsonaro/Guedes.
+Reformas liberalizantes:
+
+Da perspectiva das reformas, a agenda do governo tem direcionado a economia para um novo modelo de desenvolvimento, baseado em políticas liberais que visam “destravar” o mercado das amarras do Estado via desregulamentação, permitindo que a iniciativa privada comande o processo econômico, inclusive no que se refere aos investimentos. Políticas de demanda tem papel nulo ou marginal nesta estratégia de crescimento, podendo apenas ser adotadas excepcionalmente através de medidas pontuais que não impliquem em custo fiscal.
+As principais medidas implementadas e anunciadas são:
+
+- Reforma trabalhista: aprovada no final de 2016, promoveu grande flexibilização no mercado de trabalho, tais como: contribuição sindical opcional; mudanças nas regras de demissão, descanso e férias; permite jornada de trabalho até 12 horas; cria modalidade de contratação a termo, trabalho intermitente, etc.;
+- Reforma da previdência: aprovada no final de 2019, fase da aprovação pelo Congresso Nacional): mudança na idade mínima – 62 anos para mulheres e 65 anos para homens -, nas regras de pensão para viúva e filhos, etc.;
+- Reforma tributária (a ser definida);
+- Privatização das empresas estatais, já iniciado pelas subsidiárias, como BR Distribuidora, atingindo no limite as “gigantes” estatais, como a própria Petrobrás;
+- Abertura comercial com redução nas tarifas alfandegárias, no contexto da estratégia de “recuperar a competitividade via economia de mercado”;
+*** Políticas ortodoxas:
+**** Política fiscal:
+Porém, no desespero por recuperar a credibilidade em suas políticas econômicas, mas sem se preocupar em efetivamente reformar o orçamento público para o construir com potencial contracíclico, via orçamentos corrente e de capital, o governo que se seguiu ao impeachment de Dilma Rousseff continuou com a busca pela austeridade fiscal, porém desta vez implementada na forma de uma Emenda Constitucional (95/2016), a chamada Regra do Teto de Gastos que, diga-se de passagem, havia aparecido de forma incipiente na proposta do governo de Michel Temer, intitulada ‘Ponte para o Futuro’.
+
+Em dezembro de 2016 fez-se promulgada a referida Emenda Constitucional 95, que limitou por 20 anos a variação da despesa primária do governo federal à inflação acumulada no Índice de Preços ao Consumidor Amplo (IPCA), visando à queda da participação real dos gastos públicos no PIB à medida que este crescesse em termos reais. Despesas financeiras, como o pagamento de juros ou o montante de amortizações, não entram na regra e, portanto, o limite de variação se aplica apenas aos dispêndios primários. Visto que gastos obrigatórios, como previdência, crescem vegetativamente, o discricionário investimento público, já minguado, tem sido o item sacrificado para o cumprimento do Teto. Por demais influenciada pelo ciclo econômico, e por de menos atento a ele, a regra de limite de gastos pode ser irrealizável bem antes de seu fim (parcial) previsto para 2026. Daí a corrida pela reforma da previdência.
+
+**** Política monetária
+Com o governo Temer uma nova equipe assumiu o Banco Central e com ela uma agenda de reformas para o sistema financeiro nacional foi proposta; a mesma agenda foi reformulada e aprofundada no governo Bolsonaro. As medidas vão no sentido geral de diminuir a intervenção e atuação do Estado. Por exemplo, um dos objetivos centrais é a diminuição da participação do governo no mercado de crédito, através da substituição do financiamento público pelo privado.
+
+Esses governos ainda colocaram como prioridade máxima trazer a inflação para o centro da meta de 4,5%.
+A partir do primeiro semestre de 2017, o ritmo de queda da inflação intensificou-se, com o IPCA registrando no acumulado do ano um valor bem inferior ao da meta e igual 2,95%; uma queda grande comparada aos 10,5% de 2015. Após a melhora das condições de oferta dos alimentos e do restabelecimento dos preços de monitorados em patamar razoável, as principais pressões inflacionárias dos últimos anos cederam até 2019.
+
+Assim, com a progressiva melhora inflacionária o Banco Centrou iniciou a redução da taxa Selic em 2016 como uma medida estimativa para impulsionar a economia que permaneceu com fraco desempenho.  No início de 2016 a taxa Selic estava no patamar de 14,25%, já no final de 2020 atingiu o valor de 2%, o mais baixo deste a implantação do regime de metas.
+**** Política cambial:
+A política cambial seguiu o sentido da política monetária de maior flexibilização e menor intervenção do Estado. Novas propostas também tem sido colocados no sentido de ampliar a conversibilidade do real.   Se, por um lado, desburocratizar e simplificar esse mercado pode ser considerado um objetivo válido, por outro lado, medidas como a permissão de contas em dólar para pessoas físicas e jurídicas podem criar problemas adicionais para a economia brasileira aumentando a volatilidade cambial e reduzindo o espaço de política econômica.
+
+- Como medida pontual para estimular a demanda de consumo das famílias, dada o fraco desempenho econômico, novas modalidades de saques do FGTS foram iniciadas no Governo Temer. Entre 2016 e 2017, cerca de R$ 44 bilhões foram liberados do FGTS; em 2019, foram disponibilizados mais R$42,6 bilhões do FGTS e R$23 bilhões do PIS/PASEP e finalmente com o aprofundamento da crise do corona vírus mais R$16 bilhões foram disponibilizados por esses fundos. Se por um lado, eles tiveram um papel fundamental no desempenho do PIB nos últimos anos, por outro representaram injeções de liquidez de caráter curto-prazista na economia e o enfraquecimento de um importante mecanismo de financiamento de longo prazo para políticas públicas.
+** Crise do covid
+Em 2020, a economia global foi atingida por uma crise de natureza e intensidade diversas daquelas até então vivenciadas: uma crise sanitária que se transformou rapidamente em forte e aguda crise econômica. Diante da rápida disseminação da Covid-19, dada a combinação de contágio célere, pouco conhecimento, ausência de tratamento específico e situações de rápido agravamento marcadas por elevado risco de morte, a principal forma de atenuação do espraiamento da doença, sobretudo em um primeiro momento, foi a adoção de medidas de isolamento social. Tais medidas levaram a quedas acentuadas da demanda e, desta forma, a uma forte desaceleração do ritmo da atividade econômica, e importante fragilização financeira de empresas e famílias, com seus desdobramentos negativos sobre o emprego.
+
+No Brasil, no terceiro trimestre o PIB recuou 3,5% e o desemprego cresceu 1,1 ponto percentual no segundo trimestre, atingindo 13,3 %. Segundo os dados da PNAD, em apenas 3 meses, foram fechados 8,9 milhões de postos de trabalho. O aumento da incerteza e crise global ainda proveram forte saída de capital do país forçando uma grande desvalorização cambial;
+
+Para combater a crise, foram adotadas medidas de proteção da renda e do emprego, e de suporte a empresas pelo governo federal.  Entre as medidas de proteção à renda, destacou-se o “auxílio emergencial”, de R$ 600 mensais, acompanhado de novos saques do FGTS, anúncio de reforço do Bolsa Família, além de antecipações de parcelas de mecanismos já existentes, como do 13º salário de aposentados e do INSS,  abono salarial, seguro desemprego e Benefício de Prestação Continuada. A criação do Programa Emergencial de Manutenção do Emprego e da Renda, que possibilitou a diminuição das jornadas de trabalho e salários de trabalhadores formais, teve como propósito anunciado atenuar as pressões sobre empresas e proteger o emprego. Foram realizadas ainda um conjunto de medidas para liberação de liquidez no sistema financeiro nacional, atenuação de requerimentos de capital e políticas de crédito para o setor empresarial, como o Pronamp e o programa emergencial de acesso ao crédito.
+
+Apesar desse conjunto de medidas a perspectiva de retomada da atividade econômica ainda é difícil.
