--- a/Readings/Bubbles.org
+++ b/Readings/Bubbles.org
@@ -80,6 +80,16 @@
 
 * [#A] Books
 
+** READ [#A] [[https://www.bis.org/publ/bppdf/bispap95.htm][Frontiers of macrofinancial linkages]]
+   :PROPERTIES:
+   :YEAR:    2018
+   :ZOTERO:   Yes
+   :TYPE:     Review
+   :STATUS:   Downloaded
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:
 ** PARTIAL [#B] [[https://www.amazon.com.br/New-Paradigm-Macroeconomics-Macroeconomic-Performance/dp/1403920745][Werner - The New Paradigm in Macroeconomics: Solving the Riddle of Japanese Macroeconomic]]
    :PROPERTIES:
    :YEAR:    2005    
